fix: allow preflight OPTIONS and integrate CORS with Spring Security